# bevy_project

./: Cargo.toml  LICENSE  README.md  cSpell.json
assets/ARABIAN CHESS/: license.txt
src/: board.rs  input.rs  main.rs  pieces.rs
