[package]
name = "bevy_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_mod_picking = "0.16.0"
bevy_vector_shapes = "0.6.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
